<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="2dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:elevation = "10dp"
        android:padding = "2dp"

        app:cardBackgroundColor="@color/white"
        android:id="@+id/cv"

        >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:scaleType="centerCrop"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true" />

            <TextView
                android:id="@+id/lotNameView"
                android:textStyle="bold"
                android:text="@string/list_lot_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="#FFFFFF"
                android:paddingTop="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/lotAvail"
                android:text="@string/list_lot_avail"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="12dp"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/smalltext"
                android:layout_below="@+id/lotLocation"
                android:layout_alignParentStart="true" />

            <TextView
                android:id="@+id/lotID"
                android:text="@string/list_lot_id"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/lotNameView"
                android:layout_alignBottom="@+id/lotNameView"
                android:layout_alignEnd="@+id/lotDistance" />

            <TextView
                android:id="@+id/lotLocation"
                android:text="@string/list_lot_location"
                android:textStyle="italic"
                android:textSize="@dimen/medtext"
                android:textColor="#FFFFFF"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="12dp"
                android:layout_below="@+id/lotNameView"
                android:layout_alignStart="@+id/lotNameView"
                android:layout_toStartOf="@+id/lotID"
                android:layout_alignEnd="@+id/lotDistance" />

            <TextView
                android:id="@+id/lotDistance"
                android:text="@string/list_lot_dist"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/smalltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lotLocation"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="22dp" />

            <TextView
                android:id="@+id/lotPrice"
                android:text="@string/list_lot_price"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/smalltext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lotAvail"
                android:layout_alignStart="@+id/lotAvail" />



            <TextView
                android:id="@+id/lotCapacity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subtitle_lot_capacity"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/smalltext"
                android:layout_alignStart="@+id/lotDistance"
                android:layout_below="@+id/lotDistance" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>