<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comment_label"
        android:textSize="18sp"
        android:textColor="#000000"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:layout_marginStart="14dp"
        android:layout_marginTop="13dp" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_alignStart="@+id/comment"
        android:layout_below="@+id/comment"
        android:layout_marginTop="13dp"
        android:paddingBottom="15dp"
        android:text="Username" />

    <TextView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/userName"
        android:layout_alignTop="@+id/userName"
        android:textColor="#000000"
        android:text="@string/string_separator" />

    <TextView
        android:id="@+id/timeLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:layout_alignTop="@+id/separator"
        android:layout_toEndOf="@+id/separator"
        android:text="@string/time_log" />
</RelativeLayout>