<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:focusableInTouchMode="true"
    tools:context="g13capstone.spotter.presentation.CommentActivity">
        <Spinner
            style="@style/SpinnerAsEditText"
            android:id="@+id/commentSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible"
            android:layout_above="@+id/commentDesc"
            android:layout_alignParentStart="true" />

        <Spinner
            style="@style/SpinnerAsEditText"
            android:id="@+id/lotSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/lotButton" />

        <ListView
            android:id="@+id/comList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lotSpinner"
            android:divider="@color/grey"
            android:dividerHeight="2dp"
            android:visibility="invisible"
            android:elevation="@dimen/cardview_default_elevation"
            android:layout_above="@+id/commentSpinner" />

        <Button
            android:id="@+id/addComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comment_button"
            android:visibility="invisible"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/lotButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/lot_button" />

        <ProgressBar
            android:id="@+id/commentProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lotSpinner"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="157dp"
            android:indeterminate="true"
            android:visibility="invisible"/>

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:inputType="textPersonName"
            android:text="@string/user_name_text"
            android:textColor="#000000"
            android:selectAllOnFocus="true"
            android:focusable="true"
            android:visibility="invisible"
            android:maxLines="1"
            android:layout_below="@+id/commentDesc"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/addComment"
            android:layout_alignParentBottom="true" />

        <EditText
            android:id="@+id/commentDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:inputType="textShortMessage"
            android:text="@string/enter_description"
            android:textColor="#000000"
            android:selectAllOnFocus="true"
            android:focusable="true"
            android:maxLines="1"
            android:visibility="invisible"
            android:layout_above="@+id/addComment"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/emptyComment"
            android:textSize="@dimen/medtext"
            android:paddingTop="20dp"
            android:text="@string/no_comment"
            android:visibility="invisible"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lotSpinner"
            android:layout_centerHorizontal="true" />

</RelativeLayout>
